Fix inference notebooks to work in package

--- a/notebooks/predict_test.ipynb
+++ b/notebooks/predict_test.ipynb
@@ -33,6 +33,23 @@
    "metadata": {},
    "source": [
     "***\n",
+    "## Setup ensemble weights\n",
+    "\n",
+    "Copy or link your final set of model weights into a common directroy. For example:\n",
+    "\n",
+    "```bash\n",
+    "cd ../params/baseline\n",
+    "mkdir ensemble \n",
+    "cd ensemble\n",
+    "ln -s ../unet*/*_avg_best.params .\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
     "## Setup hyperparameters"
    ]
   },
@@ -45,7 +62,7 @@
     "args = argparse.Namespace()\n",
     "\n",
     "args.data_dir = '/datasets/brats_2018'\n",
-    "args.weights_dir = '../params/baseline'\n",
+    "args.weights_dir = '../params/baseline/ensemble'\n",
     "args.output_dir = '../predictions/baseline'\n",
     "\n",
     "# Training\n",
@@ -95,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testset = MRISegDataset4D(root=args.data_dir, split='test', mode='val', crop_size=args.pad_size_val, transform=brats_transform, means=means_brain, stds=stds_brain)\n",
+    "testset = MRISegDataset(root=args.data_dir, split='test', mode='val', crop_size=args.pad_size_val, transform=brats_transform, means=means_brain, stds=stds_brain)\n",
     "test_data = gluon.data.DataLoader(testset, batch_size=1, num_workers=args.num_workers, shuffle=False, last_batch='keep')"
    ]
   },
@@ -157,37 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subdir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.listdir(subdir)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "subdir = os.path.normpath(testset.paths()[0])\n",
-    "# img_path = os.path.join(subdir, os.path.basename(subdir) + '_4D.nii.gz')\n",
     "img_path = os.path.join(subdir, os.listdir(subdir)[0])\n",
     "hdr = nib.load(img_path).header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(hdr)"
    ]
   },
   {
@@ -217,15 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.collect_params().initialize(force_reinit=True, ctx=args.ctx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model.collect_params().initialize(force_reinit=True, ctx=args.ctx)\n",
     "model.hybridize()"
    ]
   },
@@ -236,15 +217,6 @@
    "outputs": [],
    "source": [
     "weights_paths = [os.path.join(args.weights_dir, X) for X in sorted(os.listdir(args.weights_dir))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights_paths"
    ]
   },
   {
