--- a/notebooks/predict_training_CV.ipynb
+++ b/notebooks/predict_training_CV.ipynb
@@ -33,6 +33,23 @@
    "metadata": {},
    "source": [
     "***\n",
+    "## Setup ensemble weights\n",
+    "\n",
+    "Copy or link your final set of model weights into a common directroy. For example:\n",
+    "\n",
+    "```bash\n",
+    "cd ../params/baseline\n",
+    "mkdir ensemble \n",
+    "cd ensemble\n",
+    "ln -s ../unet*/*_avg_best.params .\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
     "## Setup hyperparameters"
    ]
   },
@@ -45,10 +62,10 @@
     "args = argparse.Namespace()\n",
     "\n",
     "args.data_dir = '/datasets/brats_2018'\n",
-    "args.weights_dir = '../params/baseline'\n",
+    "args.weights_dir = '../params/baseline/ensemble' # created above\n",
     "args.output_dir = '../predictions/baseline'\n",
     "\n",
-    "args.folds = np.arange(10)\n",
+    "args.folds = np.arange(10) # Which CV folds have trained models available?\n",
     "\n",
     "# Training\n",
     "args.num_workers = 1\n",
@@ -157,7 +174,7 @@
     "    fold_inds = get_k_folds(n=285, k=10, seed=1)[int(fold)]\n",
     "    \n",
     "    # Setup dataloader\n",
-    "    valset = MRISegDataset4D(root=args.data_dir, split='val', mode='val', crop_size=args.pad_size_val, transform=brats_transform, means=means_brain, stds=stds_brain, fold_inds=fold_inds)\n",
+    "    valset = MRISegDataset(root=args.data_dir, split='val', mode='val', crop_size=args.pad_size_val, transform=brats_transform, means=means_brain, stds=stds_brain, fold_inds=fold_inds)\n",
     "    val_data = gluon.data.DataLoader(valset, batch_size=1, num_workers=args.num_workers, shuffle=False, last_batch='keep')\n",
     "    \n",
     "    # Load template NifTI header\n",
