Modifications for UCSF GK data

--- a/notebooks/predict_training_CV.ipynb
+++ b/notebooks/predict_training_CV.ipynb
@@ -61,11 +61,11 @@
    "source": [
     "args = argparse.Namespace()\n",
     "\n",
-    "args.data_dir = '/datasets/brats_2018'\n",
+    "args.data_dir = '/path/to/gk/data'\n",
     "args.weights_dir = '../params/baseline/ensemble' # created above\n",
     "args.output_dir = '../predictions/baseline'\n",
     "\n",
-    "args.folds = np.arange(10) # Which CV folds have trained models available?\n",
+    "args.folds = np.arange(5) # Which CV folds have trained models available?\n",
     "\n",
     "# Training\n",
     "args.num_workers = 1\n",
@@ -75,14 +75,14 @@
     "\n",
     "# Unet\n",
     "args.num_downs = 4 # Number of encoding/downsampling layers\n",
-    "args.classes = 4 # Number of classes for segmentation, including background\n",
+    "args.classes = 2 # Number of classes for segmentation, including background\n",
     "args.ngf = 32 # Number of channels in base/outermost layer\n",
     "args.use_bias = True # For conv blocks\n",
     "args.use_global_stats = True # For BN blocks\n",
     "\n",
     "# Pre/post-processing\n",
-    "args.pad_size_val = [240, 240, 160] # Should be input vol dims unless 'crop_size_val' is larger\n",
-    "args.crop_size_val = [240, 240, 160] # Should be divisible by 2^num_downs\n",
+    "args.pad_size_val = [256, 256, 128] # Should be input vol dims unless 'crop_size_val' is larger\n",
+    "args.crop_size_val = [80, 80, 80] # Should be divisible by 2^num_downs\n",
     "args.overlap = 0 # Fractional overlap for val patch prediction, combined with voting\n",
     "args.output_dims = [240, 240, 155]"
    ]
@@ -101,11 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('../data/normalization_stats.npz')\n",
+    "data = np.load('../data/normalization_stats_train.npz')\n",
     "means       = nd.array(data['means'])\n",
-    "stds        = nd.array(data['stds'])\n",
-    "means_brain = nd.array(data['means_brain'])\n",
-    "stds_brain  = nd.array(data['stds_brain'])"
+    "stds        = nd.array(data['stds'])"
    ]
   },
   {
@@ -171,17 +169,11 @@
     "for ifold, weights_path in enumerate(tqdm(weights_paths)):\n",
     "    # Determine fold\n",
     "    fold = re.sub('.*fold([0-9]).*', r'\\1', os.path.basename(weights_path))\n",
-    "    fold_inds = get_k_folds(n=285, k=10, seed=1)[int(fold)]\n",
+    "    fold_inds = get_k_folds(n=238, k=5, seed=1)[int(fold)]\n",
     "    \n",
     "    # Setup dataloader\n",
-    "    valset = MRISegDataset(root=args.data_dir, split='val', mode='val', crop_size=args.pad_size_val, transform=brats_transform, means=means_brain, stds=stds_brain, fold_inds=fold_inds)\n",
+    "    valset = MRISegDataset(root=args.data_dir, split='val', mode='val', crop_size=args.pad_size_val, transform=brats_transform, means=means, stds=stds, fold_inds=fold_inds)\n",
     "    val_data = gluon.data.DataLoader(valset, batch_size=1, num_workers=args.num_workers, shuffle=False, last_batch='keep')\n",
-    "    \n",
-    "    # Load template NifTI header\n",
-    "    if ifold == 0:\n",
-    "        subdir = os.path.normpath(valset.paths()[0])\n",
-    "        img_path = os.path.join(subdir, os.listdir(subdir)[0])\n",
-    "        hdr = nib.load(img_path).header\n",
     "    \n",
     "    # Load model weights\n",
     "    model.load_parameters(weights_path, ctx=args.ctx[0])\n",
@@ -192,12 +184,16 @@
     "        os.makedirs(output_dir)\n",
     "        \n",
     "    # Loop over out-of-fold subjects\n",
-    "    for isub, (data, _) in enumerate(tqdm(val_data)):\n",
-    "        subID = os.path.basename(os.path.normpath(valset.paths()[isub]))\n",
-    "        mask = brats_predict(model, data, args.crop_size_val, args.overlap, n_classes=4, ctx=args.ctx[0])\n",
-    "        mask = img_unpad(mask, args.output_dims) # Crop back to original BraTS dimensions\n",
-    "        mask = np.flip(mask, 1) # Flip AP orientation back to original BraTS convention\n",
-    "        mask[mask == 3] = 4 # Convert tissue class labels back to original BraTS convension\n",
+    "    for isub, (data, _, dims) in enumerate(tqdm(val_data)):\n",
+    "        dims = dims.squeeze().asnumpy()\n",
+    "        \n",
+    "        subdir = os.path.normpath(valset.paths()[isub])\n",
+    "        subID = os.path.basename(subdir)\n",
+    "        img_path = os.path.join(subdir, os.listdir(subdir)[0])\n",
+    "        hdr = nib.load(img_path).header        \n",
+    "        \n",
+    "        mask = brats_predict(model, data, args.crop_size_val, args.overlap, n_classes=2, ctx=args.ctx[0])\n",
+    "        mask = img_unpad(mask, dims) # Crop back to original BraTS dimensions\n",
     "        mask = mask.astype(np.int16)\n",
     "        mask_nii = nib.Nifti1Image(mask, None, header=hdr)\n",
     "        mask_nii.to_filename(os.path.join(output_dir, subID + '.nii.gz'))"
@@ -213,9 +209,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:unet]",
+   "display_name": "Python [conda env:gk]",
    "language": "python",
-   "name": "conda-env-unet-py"
+   "name": "conda-env-gk-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -227,9 +223,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
