--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -44,37 +44,37 @@
    "source": [
     "args = argparse.Namespace()\n",
     "\n",
-    "args.data_dir = '/datasets/brats_2018' # Should contain 'training' and 'validation' dirs. \n",
-    "args.fold = 0 # Fold for 10-fold CV on training data. Comment out to include all data.\n",
+    "args.data_dir = '/path/to/gk/data' # Should contain 'training' and 'validation' dirs. \n",
+    "args.fold = 0 # Fold for 5-fold CV on training data. Comment out to include all data.\n",
     "\n",
     "# Training\n",
     "args.resume = ''\n",
     "args.start_epoch = 0\n",
     "args.epochs = 600\n",
     "args.batch_size = 6\n",
-    "args.num_workers = 6\n",
+    "args.num_workers = 4\n",
     "# args.smooth = 1\n",
     "args.optimizer = 'adam'\n",
-    "args.optimizer_params = {'learning_rate': 0.0001}\n",
+    "args.optimizer_params = {'learning_rate': 0.0001, 'lr_scheduler': mx.lr_scheduler.PolyScheduler(max_update=36*args.epochs, base_lr=0.0001, pwr=2)}\n",
     "# GPU_COUNT = 1\n",
     "# args.ctx = [mx.gpu(i) for i in range(GPU_COUNT)]\n",
     "args.ctx = [mx.gpu(0)]\n",
     "\n",
     "# Unet\n",
     "args.num_downs = 4 # Number of encoding/downsampling layers\n",
-    "args.classes = 4 # Number of classes for segmentation, including background\n",
+    "args.classes = 2 # Number of classes for segmentation, including background\n",
     "args.ngf = 32 # Number of channels in base/outermost layer\n",
     "args.use_bias = True # For conv blocks\n",
     "args.use_global_stats = True # For BN blocks\n",
     "\n",
     "# Pre/post-processing\n",
     "args.crop_size_train = [80, 80, 80] # Training patch size\n",
-    "args.pad_size_val = [240, 240, 155] # Should be input vol dims unless 'crop_size_val' is larger\n",
-    "args.crop_size_val = [192, 192, 144] # Should be divisible by 2^num_downs\n",
+    "args.pad_size_val = [256, 256, 128] # Should be input vol dims unless 'crop_size_val' is larger\n",
+    "args.crop_size_val = [80, 80, 80] # Should be divisible by 2^num_downs\n",
     "args.overlap = 0 # Fractional overlap for val patch prediction, combined with voting\n",
     "if hasattr(args, 'fold'): \n",
-    "    args.fold_inds = get_k_folds(n=285, k=10, seed=1)[args.fold]\n",
-    "args.lesion_frac = 0.9 # Fraction of patch centerpoints to be placed within lesion (vs randomly within brain)\n",
+    "    args.fold_inds = get_k_folds(n=238, k=5, seed=1)[args.fold]\n",
+    "args.lesion_frac = 0.99 # Fraction of patch centerpoints to be placed within lesion (vs randomly within brain)\n",
     "# args.warp_params = None\n",
     "args.warp_params = {'theta_max': 45,\n",
     "                    'offset_max': 0,\n",
@@ -105,11 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('../data/normalization_stats.npz')\n",
+    "data = np.load('../data/normalization_stats_train.npz')\n",
     "means       = nd.array(data['means'])\n",
-    "stds        = nd.array(data['stds'])\n",
-    "means_brain = nd.array(data['means_brain'])\n",
-    "stds_brain  = nd.array(data['stds_brain'])"
+    "stds        = nd.array(data['stds'])"
    ]
   },
   {
@@ -118,8 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainset = MRISegDataset(root=args.data_dir, split='train', mode='train', crop_size=args.crop_size_train, transform=brats_transform, means=means_brain, stds=stds_brain, fold_inds=args.fold_inds, lesion_frac=args.lesion_frac, warp_params=args.warp_params)\n",
-    "valset   = MRISegDataset(root=args.data_dir, split='val',   mode='val',   crop_size=args.pad_size_val,    transform=brats_transform, means=means_brain, stds=stds_brain, fold_inds=args.fold_inds)\n",
+    "trainset = MRISegDataset(root=args.data_dir, split='train', mode='train', crop_size=args.crop_size_train, transform=brats_transform, means=means, stds=stds, fold_inds=args.fold_inds, lesion_frac=args.lesion_frac, warp_params=args.warp_params)\n",
+    "valset   = MRISegDataset(root=args.data_dir, split='val',   mode='val',   crop_size=args.pad_size_val,    transform=brats_transform, means=means, stds=stds, fold_inds=args.fold_inds)\n",
     "\n",
     "train_data = gluon.data.DataLoader(trainset, batch_size=args.batch_size, num_workers=args.num_workers, shuffle=True,  last_batch='rollover')\n",
     "val_data   = gluon.data.DataLoader(valset,   batch_size=1,               num_workers=args.num_workers, shuffle=False, last_batch='keep')"
@@ -140,7 +138,7 @@
    "outputs": [],
    "source": [
     "img, mask = trainset[0]\n",
-    "img = img[3].asnumpy()\n",
+    "img = img[1].asnumpy()\n",
     "mask = mask.squeeze().asnumpy()\n",
     "print('Training patch size:')\n",
     "img.shape"
@@ -226,8 +224,7 @@
    "source": [
     "logger, sw = start_logger(args)\n",
     "\n",
-    "best_wt     = 0.\n",
-    "best_avg    = 0.\n",
+    "best_dsc    = 0.\n",
     "global_step = 0\n",
     "for epoch in range(args.start_epoch, args.epochs):\n",
     "    tbar = tqdm(train_data)\n",
@@ -254,9 +251,8 @@
     "    if (epoch + 1) % args.val_interval == 0:\n",
     "        mx.nd.waitall()\n",
     "        metrics = brats_validate(model, val_data, crop_size=args.crop_size_val, overlap=args.overlap, ctx=args.ctx[0])\n",
-    "        DSC_avg = log_epoch_hooks(epoch, train_loss/(i+1), metrics, logger, sw)\n",
-    "        best_wt  = save_params(model, best_wt, metrics['WT']['DSC'], epoch, args.save_interval, args.save_prefix)\n",
-    "        best_avg = save_params(model, best_avg, DSC_avg, epoch, None, args.save_prefix + '_avg')\n",
+    "        log_epoch_hooks(epoch, train_loss/(i+1), metrics['Mets']['DSC'], logger, sw)\n",
+    "        best_dsc  = save_params(model, best_dsc, metrics['Mets']['DSC'], epoch, args.save_interval, args.save_prefix)\n",
     "sw.export_scalars(args.save_prefix + '_scalar_dict.json')\n",
     "sw.close()"
    ]
@@ -379,9 +375,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:unet]",
+   "display_name": "Python [conda env:gk]",
    "language": "python",
-   "name": "conda-env-unet-py"
+   "name": "conda-env-gk-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,9 +389,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
